--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -7,5 +7,6 @@ output:
 editor_options:
   chunk_output_type: console
 ---
+Image processing data summary
 
-Welcome to my research website.
+* [annotator count comparisons](compare_annotator_counts.html)
