--- a/analysis/compare_annotator_counts.Rmd
+++ b/analysis/compare_annotator_counts.Rmd
@@ -21,15 +21,19 @@ yesterday <- as.POSIXct(today-1)
 
 Compare annotator counts of eiders for images processed by everyone so far....
 
+Updated 23 Feb to compare and plot total counts by flock ID across photos,
+so flocks that spanned mutliple photos are summed across photos to get total flock counts.
+
 ```{r data wrangling, warning = FALSE}
 # load spreadsheets summarizing counts used by each annotator
 
 # afm
-afm <- read.csv("output/temp/spei_winterSurvey_imageList_afm_20231009.csv")
+afm <- read.csv("output/temp/spei_winterSurvey_imageList_afm_20240223.csv")
+afm <- afm[ ,-(22:30)]
 # ljy
-ljy <- read.csv("output/temp/spei_winterSurvey_imageList_ljy_20231009.csv")
+ljy <- read.csv("output/temp/spei_winterSurvey_imageList_ljy_20240223.csv")
 # emm
-emm <- read.csv("output/temp/spei_winterSurvey_imageList_emm_20231009.csv")
+emm <- read.csv("output/temp/spei_winterSurvey_imageList_emm_20240223.csv")
 
 # merge csv files with rbind
 all <- rbind.data.frame(afm, ljy, emm)
@@ -40,27 +44,32 @@ completed <- all[complete.cases(all$n_spei_white), ]
 # add "dt" prefix to flock ID because ggplot2 facet_wrap function won't work with IDs that start with a number
 completed$new_id_flock <- paste("id", completed$id_flock, sep = "")
 
+#aggregate total counts for each flock across photos by new id and annotator
+completed$totals <- completed$n_spei_white + completed$n_spei_brown + completed$n_spei_mottled
+counts <- aggregate(totals ~ new_id_flock*id_annotator, FUN = "sum", data = completed)
+
 # remove flocks that require > 1 image to count (i.e., flocks that span multi images) and flocks not counted by all 3 annotators
 # create vector of flock IDs that match the above criteria
-remove <- c("20230315_rep4_11a",
-"20230315_rep4_17",
-"20230315_rep4_18",
-"20230315_rep4_18a",
-"20230315_rep4_20",
-"20230315_rep4_24a",
-"20230315_rep4_24b",
-"20230315_rep4_28",
-"20230315_rep4_4",
-"20230315_rep4_4b",
-"20230315_rep4_4a",
-"20230315_rep4_7a",
-"20230315_rep4_24d")
+#remove <- c("20230315_rep4_11a",
+#"20230315_rep4_17",
+#"20230315_rep4_18",
+#"20230315_rep4_18a",
+#"20230315_rep4_20",
+#"20230315_rep4_24a",
+#"20230315_rep4_24b",
+#"20230315_rep4_28",
+#"20230315_rep4_4",
+#"20230315_rep4_4b",
+#"20230315_rep4_4a",
+#"20230315_rep4_7a",
+#"20230315_rep4_24d")
 
 # remove those flock IDs from the data frame
-compare <- completed[!completed$id_flock %in% remove, ]
+#compare <- completed[!completed$id_flock %in% remove, ]
 ```
 
 ```{r present data table, warning = FALSE}
+compare <- completed
 present <- cbind.data.frame(compare$id_photo, compare$id_flock, compare$id_annotator, compare$n_spei_white, compare$n_spei_brown, compare$n_spei_mottled)
 names <- c("id_photo", "id_flock", "id_annotator", "n_white", "n_brown", "n_mottled")
 colnames(present) <- names
@@ -68,7 +77,7 @@ present[order(present$id_flock),]
 ```
 
 White plumage
-```{r plot counts spei white, warning = FALSE}
+```{r plot counts spei white, warning = FALSE, fig.width=12, fig.height=12}
 # plot counts for comparison
 p.spei_white <-
   ggplot(compare, aes(id_annotator, n_spei_white)) +
@@ -80,25 +89,40 @@ p.spei_white
 
 ```
 Brown plumage
-```{r plot counts spei brown, warning = FALSE}
+```{r plot counts spei brown, warning = FALSE, fig.width=12, fig.height=12}
 # plot counts for comparison
 p.spei_brown <-
   ggplot(compare, aes(id_annotator, n_spei_brown)) +
   geom_bar(position="dodge",stat="identity") +
   geom_text(aes(label=n_spei_brown), position=position_dodge(width=0.9), vjust=-0.25) +
   ylim(0, 1500) +
+ # title("Brown Plumage Counts by Flock ID") +
   facet_wrap(~compare$new_id_flock)
 p.spei_brown
 
 ```
 Mottled plumage
-```{r plot counts spei mottled, warning = FALSE}
+```{r plot counts spei mottled, warning = FALSE, fig.width=12, fig.height=12}
 # plot counts for comparison
 p.spei_mottled <-
   ggplot(compare, aes(id_annotator, n_spei_mottled)) +
   geom_bar(position="dodge",stat="identity") +
   geom_text(aes(label=n_spei_mottled), position=position_dodge(width=0.9), vjust=-0.25) +
+  # title("Mottled Plumage Counts by Flock ID") +
   facet_wrap(~compare$new_id_flock)
 p.spei_mottled
+
+```
+
+Total counts
+```{r plot counts, warning = FALSE, fig.width=12, fig.height=12}
+p.totals <- 
+  ggplot(counts, aes(id_annotator, totals)) +
+  geom_bar(position="dodge",stat="identity") +
+  geom_text(aes(label=totals), position=position_dodge(width=0.9), vjust=-0.25) +
+  ylim(0, 3500) +
+  #title("Total Counts by Flock ID") +
+  facet_wrap(~counts$new_id_flock) #comment
+p.totals
 
 ```
